--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,8 +14,8 @@
     />
 
     <link
+      href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Staatliches"
     />
 
     <!-- UIkit JS -->
