--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,8 @@
       href="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/css/uikit.min.css"
     />
 
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
+
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap"
       rel="stylesheet"
