--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,23 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-
     <!-- UIkit CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/css/uikit.min.css"
     />
-
-    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
-
     <link
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap"
       rel="stylesheet"
     />
-
-    <!-- UIkit JS -->
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
     <noscript>
@@ -34,5 +26,10 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.1/dist/js/uikit-icons.min.js"></script>
+    <!-- Iconify JS -->
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
   </body>
 </html>
